@@ -1,3 +1,7 @@
+2005-03-18  C Jaipraash  <cjaiprakash@noida.hcltech.com>
+
+	* m68k.h (EF_CFV4E): Define.
+
 2005-03-17  Paul Brook <paul@codesourcery.com>
 	    Dan Jacobowitz <dan@codesourcery.com>
 	    Mark Mitchell  <mark@codesourcery.com>
